// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`monorepo generate-package-list { app: 'ejected', platform: 'android' } 1`] = `
"package com.test;

import java.util.Arrays;
import java.util.List;
import expo.modules.core.interfaces.Package;
import expo.modules.kotlin.modules.Module;
import expo.modules.kotlin.ModulesProvider;

public class ExpoModulesPackageList implements ModulesProvider {
  private static class LazyHolder {
    static final List<Package> packagesList = Arrays.<Package>asList(
      new expo.modules.application.ApplicationPackage(),
      new expo.modules.constants.ConstantsPackage(),
      new expo.modules.errorrecovery.ErrorRecoveryPackage(),
      new expo.modules.filesystem.FileSystemPackage(),
      new expo.modules.font.FontLoaderPackage(),
      new expo.modules.imageloader.ImageLoaderPackage(),
      new expo.modules.keepawake.KeepAwakePackage(),
      new expo.modules.permissions.PermissionsPackage(),
      new expo.modules.splashscreen.SplashScreenPackage(),
      new expo.modules.updates.UpdatesPackage(),
      new org.unimodules.core.BasePackage()
    );

    static final List<Class<? extends Module>> modulesList = Arrays.<Class<? extends Module>>asList(
      
    );
  }

  public static List<Package> getPackageList() {
    return LazyHolder.packagesList;
  }

  @Override
  public List<Class<? extends Module>> getModulesList() {
    return LazyHolder.modulesList;
  }
}
"
`;

exports[`monorepo generate-package-list { app: 'ejected', platform: 'ios' } 1`] = `
"/**
 * Automatically generated by expo-modules-autolinking.
 *
 * This autogenerated class provides a list of classes of native Expo modules,
 * but only these that are written in Swift and use the new API for creating Expo modules.
 */

import ExpoModulesCore

@objc(file)
public class file: ModulesProvider {
  public override func getModuleClasses() -> [AnyModule.Type] {
    return [
    ]
  }

  public override func getAppDelegateSubscribers() -> [ExpoAppDelegateSubscriber.Type] {
    return [
    ]
  }
}
"
`;

exports[`monorepo generate-package-list { app: 'managed', platform: 'android' } 1`] = `
"package com.test;

import java.util.Arrays;
import java.util.List;
import expo.modules.core.interfaces.Package;
import expo.modules.kotlin.modules.Module;
import expo.modules.kotlin.ModulesProvider;

public class ExpoModulesPackageList implements ModulesProvider {
  private static class LazyHolder {
    static final List<Package> packagesList = Arrays.<Package>asList(
      new expo.modules.application.ApplicationPackage(),
      new expo.modules.constants.ConstantsPackage(),
      new expo.modules.errorrecovery.ErrorRecoveryPackage(),
      new expo.modules.filesystem.FileSystemPackage(),
      new expo.modules.font.FontLoaderPackage(),
      new expo.modules.imageloader.ImageLoaderPackage(),
      new expo.modules.keepawake.KeepAwakePackage(),
      new expo.modules.permissions.PermissionsPackage(),
      new expo.modules.splashscreen.SplashScreenPackage(),
      new expo.modules.updates.UpdatesPackage(),
      new org.unimodules.core.BasePackage()
    );

    static final List<Class<? extends Module>> modulesList = Arrays.<Class<? extends Module>>asList(
      
    );
  }

  public static List<Package> getPackageList() {
    return LazyHolder.packagesList;
  }

  @Override
  public List<Class<? extends Module>> getModulesList() {
    return LazyHolder.modulesList;
  }
}
"
`;

exports[`monorepo generate-package-list { app: 'managed', platform: 'ios' } 1`] = `
"/**
 * Automatically generated by expo-modules-autolinking.
 *
 * This autogenerated class provides a list of classes of native Expo modules,
 * but only these that are written in Swift and use the new API for creating Expo modules.
 */

import ExpoModulesCore

@objc(file)
public class file: ModulesProvider {
  public override func getModuleClasses() -> [AnyModule.Type] {
    return [
    ]
  }

  public override func getAppDelegateSubscribers() -> [ExpoAppDelegateSubscriber.Type] {
    return [
    ]
  }
}
"
`;

exports[`monorepo generate-package-list { app: 'with-sentry', platform: 'android' } 1`] = `
"package com.test;

import java.util.Arrays;
import java.util.List;
import expo.modules.core.interfaces.Package;
import expo.modules.kotlin.modules.Module;
import expo.modules.kotlin.ModulesProvider;

public class ExpoModulesPackageList implements ModulesProvider {
  private static class LazyHolder {
    static final List<Package> packagesList = Arrays.<Package>asList(
      new expo.modules.application.ApplicationPackage(),
      new expo.modules.constants.ConstantsPackage(),
      new expo.modules.device.DevicePackage(),
      new expo.modules.errorrecovery.ErrorRecoveryPackage(),
      new expo.modules.filesystem.FileSystemPackage(),
      new expo.modules.font.FontLoaderPackage(),
      new expo.modules.imageloader.ImageLoaderPackage(),
      new expo.modules.keepawake.KeepAwakePackage(),
      new expo.modules.permissions.PermissionsPackage(),
      new expo.modules.splashscreen.SplashScreenPackage(),
      new expo.modules.updates.UpdatesPackage(),
      new org.unimodules.core.BasePackage()
    );

    static final List<Class<? extends Module>> modulesList = Arrays.<Class<? extends Module>>asList(
      
    );
  }

  public static List<Package> getPackageList() {
    return LazyHolder.packagesList;
  }

  @Override
  public List<Class<? extends Module>> getModulesList() {
    return LazyHolder.modulesList;
  }
}
"
`;

exports[`monorepo generate-package-list { app: 'with-sentry', platform: 'ios' } 1`] = `
"/**
 * Automatically generated by expo-modules-autolinking.
 *
 * This autogenerated class provides a list of classes of native Expo modules,
 * but only these that are written in Swift and use the new API for creating Expo modules.
 */

import ExpoModulesCore

@objc(file)
public class file: ModulesProvider {
  public override func getModuleClasses() -> [AnyModule.Type] {
    return [
    ]
  }

  public override func getAppDelegateSubscribers() -> [ExpoAppDelegateSubscriber.Type] {
    return [
    ]
  }
}
"
`;

exports[`monorepo resolve { app: 'ejected', platform: 'android' } 1`] = `
Array [
  Object {
    "modulesClassNames": Array [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "podspecDir": undefined,
    "projectName": "unimodules-core",
    "sourceDir": "monorepo/node_modules/@unimodules/core/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "podspecDir": undefined,
    "projectName": "expo-application",
    "sourceDir": "monorepo/node_modules/expo-application/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "podspecDir": undefined,
    "projectName": "expo-constants",
    "sourceDir": "monorepo/node_modules/expo-constants/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "podspecDir": undefined,
    "projectName": "expo-error-recovery",
    "sourceDir": "monorepo/node_modules/expo-error-recovery/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "podspecDir": undefined,
    "projectName": "expo-file-system",
    "sourceDir": "monorepo/node_modules/expo-file-system/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "podspecDir": undefined,
    "projectName": "expo-font",
    "sourceDir": "monorepo/node_modules/expo-font/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "podspecDir": undefined,
    "projectName": "expo-image-loader",
    "sourceDir": "monorepo/node_modules/expo-image-loader/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "podspecDir": undefined,
    "projectName": "expo-keep-awake",
    "sourceDir": "monorepo/node_modules/expo-keep-awake/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "podspecDir": undefined,
    "projectName": "expo-modules-core",
    "sourceDir": "monorepo/node_modules/expo-modules-core/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "podspecDir": undefined,
    "projectName": "expo-permissions",
    "sourceDir": "monorepo/node_modules/expo-permissions/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "podspecDir": undefined,
    "projectName": "expo-splash-screen",
    "sourceDir": "monorepo/node_modules/expo-splash-screen/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "podspecDir": undefined,
    "projectName": "expo-structured-headers",
    "sourceDir": "monorepo/node_modules/expo-structured-headers/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.0",
    "podspecDir": undefined,
    "projectName": "expo-updates",
    "sourceDir": "monorepo/node_modules/expo-updates/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.1",
    "podspecDir": undefined,
    "projectName": "expo-updates-interface",
    "sourceDir": "monorepo/node_modules/expo-updates-interface/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "podspecDir": undefined,
    "projectName": "unimodules-app-loader",
    "sourceDir": "monorepo/node_modules/unimodules-app-loader/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "podspecDir": undefined,
    "projectName": "unimodules-task-manager-interface",
    "sourceDir": "monorepo/node_modules/unimodules-task-manager-interface/android",
  },
]
`;

exports[`monorepo resolve { app: 'ejected', platform: 'ios' } 1`] = `
Array [
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "podName": "UMCore",
    "podspecDir": "monorepo/node_modules/@unimodules/core/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "@unimodules/react-native-adapter",
    "packageVersion": "6.3.1",
    "podName": "UMReactNativeAdapter",
    "podspecDir": "monorepo/node_modules/@unimodules/react-native-adapter/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "podName": "EXApplication",
    "podspecDir": "monorepo/node_modules/expo-application/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "podName": "EXConstants",
    "podspecDir": "monorepo/node_modules/expo-constants/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "podName": "EXErrorRecovery",
    "podspecDir": "monorepo/node_modules/expo-error-recovery/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "podName": "EXFileSystem",
    "podspecDir": "monorepo/node_modules/expo-file-system/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "podName": "EXFont",
    "podspecDir": "monorepo/node_modules/expo-font/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "podName": "EXImageLoader",
    "podspecDir": "monorepo/node_modules/expo-image-loader/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "podName": "EXKeepAwake",
    "podspecDir": "monorepo/node_modules/expo-keep-awake/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "podName": "ExpoModulesCore",
    "podspecDir": "monorepo/node_modules/expo-modules-core/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "podName": "EXPermissions",
    "podspecDir": "monorepo/node_modules/expo-permissions/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "podName": "EXSplashScreen",
    "podspecDir": "monorepo/node_modules/expo-splash-screen/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "podName": "EXStructuredHeaders",
    "podspecDir": "monorepo/node_modules/expo-structured-headers/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.0",
    "podName": "EXUpdates",
    "podspecDir": "monorepo/node_modules/expo-updates/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.1",
    "podName": "EXUpdatesInterface",
    "podspecDir": "monorepo/node_modules/expo-updates-interface/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "podName": "UMAppLoader",
    "podspecDir": "monorepo/node_modules/unimodules-app-loader/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "podName": "UMTaskManagerInterface",
    "podspecDir": "monorepo/node_modules/unimodules-task-manager-interface/ios",
    "sourceDir": undefined,
  },
]
`;

exports[`monorepo resolve { app: 'managed', platform: 'android' } 1`] = `
Array [
  Object {
    "modulesClassNames": Array [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "podspecDir": undefined,
    "projectName": "unimodules-core",
    "sourceDir": "monorepo/node_modules/@unimodules/core/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "podspecDir": undefined,
    "projectName": "expo-application",
    "sourceDir": "monorepo/node_modules/expo-application/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "podspecDir": undefined,
    "projectName": "expo-constants",
    "sourceDir": "monorepo/node_modules/expo-constants/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "podspecDir": undefined,
    "projectName": "expo-error-recovery",
    "sourceDir": "monorepo/node_modules/expo-error-recovery/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "podspecDir": undefined,
    "projectName": "expo-file-system",
    "sourceDir": "monorepo/node_modules/expo-file-system/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "podspecDir": undefined,
    "projectName": "expo-font",
    "sourceDir": "monorepo/node_modules/expo-font/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "podspecDir": undefined,
    "projectName": "expo-image-loader",
    "sourceDir": "monorepo/node_modules/expo-image-loader/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "podspecDir": undefined,
    "projectName": "expo-keep-awake",
    "sourceDir": "monorepo/node_modules/expo-keep-awake/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "podspecDir": undefined,
    "projectName": "expo-modules-core",
    "sourceDir": "monorepo/node_modules/expo-modules-core/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "podspecDir": undefined,
    "projectName": "expo-permissions",
    "sourceDir": "monorepo/node_modules/expo-permissions/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "podspecDir": undefined,
    "projectName": "expo-splash-screen",
    "sourceDir": "monorepo/node_modules/expo-splash-screen/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "podspecDir": undefined,
    "projectName": "expo-structured-headers",
    "sourceDir": "monorepo/node_modules/expo-structured-headers/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.0",
    "podspecDir": undefined,
    "projectName": "expo-updates",
    "sourceDir": "monorepo/node_modules/expo-updates/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.1",
    "podspecDir": undefined,
    "projectName": "expo-updates-interface",
    "sourceDir": "monorepo/node_modules/expo-updates-interface/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "podspecDir": undefined,
    "projectName": "unimodules-app-loader",
    "sourceDir": "monorepo/node_modules/unimodules-app-loader/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "podspecDir": undefined,
    "projectName": "unimodules-task-manager-interface",
    "sourceDir": "monorepo/node_modules/unimodules-task-manager-interface/android",
  },
]
`;

exports[`monorepo resolve { app: 'managed', platform: 'ios' } 1`] = `
Array [
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "podName": "UMCore",
    "podspecDir": "monorepo/node_modules/@unimodules/core/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "@unimodules/react-native-adapter",
    "packageVersion": "6.3.1",
    "podName": "UMReactNativeAdapter",
    "podspecDir": "monorepo/node_modules/@unimodules/react-native-adapter/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "podName": "EXApplication",
    "podspecDir": "monorepo/node_modules/expo-application/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "podName": "EXConstants",
    "podspecDir": "monorepo/node_modules/expo-constants/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "podName": "EXErrorRecovery",
    "podspecDir": "monorepo/node_modules/expo-error-recovery/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "podName": "EXFileSystem",
    "podspecDir": "monorepo/node_modules/expo-file-system/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "podName": "EXFont",
    "podspecDir": "monorepo/node_modules/expo-font/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "podName": "EXImageLoader",
    "podspecDir": "monorepo/node_modules/expo-image-loader/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "podName": "EXKeepAwake",
    "podspecDir": "monorepo/node_modules/expo-keep-awake/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "podName": "ExpoModulesCore",
    "podspecDir": "monorepo/node_modules/expo-modules-core/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "podName": "EXPermissions",
    "podspecDir": "monorepo/node_modules/expo-permissions/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "podName": "EXSplashScreen",
    "podspecDir": "monorepo/node_modules/expo-splash-screen/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "podName": "EXStructuredHeaders",
    "podspecDir": "monorepo/node_modules/expo-structured-headers/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.0",
    "podName": "EXUpdates",
    "podspecDir": "monorepo/node_modules/expo-updates/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.1",
    "podName": "EXUpdatesInterface",
    "podspecDir": "monorepo/node_modules/expo-updates-interface/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "podName": "UMAppLoader",
    "podspecDir": "monorepo/node_modules/unimodules-app-loader/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "podName": "UMTaskManagerInterface",
    "podspecDir": "monorepo/node_modules/unimodules-task-manager-interface/ios",
    "sourceDir": undefined,
  },
]
`;

exports[`monorepo resolve { app: 'with-sentry', platform: 'android' } 1`] = `
Array [
  Object {
    "modulesClassNames": Array [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "podspecDir": undefined,
    "projectName": "unimodules-core",
    "sourceDir": "monorepo/node_modules/@unimodules/core/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "podspecDir": undefined,
    "projectName": "expo-application",
    "sourceDir": "monorepo/node_modules/expo-application/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "podspecDir": undefined,
    "projectName": "expo-constants",
    "sourceDir": "monorepo/node_modules/expo-constants/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-device",
    "packageVersion": "3.3.0",
    "podspecDir": undefined,
    "projectName": "expo-device",
    "sourceDir": "monorepo/node_modules/expo-device/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "podspecDir": undefined,
    "projectName": "expo-error-recovery",
    "sourceDir": "monorepo/node_modules/expo-error-recovery/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "podspecDir": undefined,
    "projectName": "expo-file-system",
    "sourceDir": "monorepo/node_modules/expo-file-system/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "podspecDir": undefined,
    "projectName": "expo-font",
    "sourceDir": "monorepo/node_modules/expo-font/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "podspecDir": undefined,
    "projectName": "expo-image-loader",
    "sourceDir": "monorepo/node_modules/expo-image-loader/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "podspecDir": undefined,
    "projectName": "expo-keep-awake",
    "sourceDir": "monorepo/node_modules/expo-keep-awake/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "podspecDir": undefined,
    "projectName": "expo-modules-core",
    "sourceDir": "monorepo/node_modules/expo-modules-core/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "podspecDir": undefined,
    "projectName": "expo-permissions",
    "sourceDir": "monorepo/node_modules/expo-permissions/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "podspecDir": undefined,
    "projectName": "expo-splash-screen",
    "sourceDir": "monorepo/node_modules/expo-splash-screen/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "podspecDir": undefined,
    "projectName": "expo-structured-headers",
    "sourceDir": "monorepo/node_modules/expo-structured-headers/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.2",
    "podspecDir": undefined,
    "projectName": "expo-updates",
    "sourceDir": "monorepo/apps/with-sentry/node_modules/expo-updates/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.2",
    "podspecDir": undefined,
    "projectName": "expo-updates-interface",
    "sourceDir": "monorepo/apps/with-sentry/node_modules/expo-updates-interface/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "podspecDir": undefined,
    "projectName": "unimodules-app-loader",
    "sourceDir": "monorepo/node_modules/unimodules-app-loader/android",
  },
  Object {
    "modulesClassNames": Array [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "podspecDir": undefined,
    "projectName": "unimodules-task-manager-interface",
    "sourceDir": "monorepo/node_modules/unimodules-task-manager-interface/android",
  },
]
`;

exports[`monorepo resolve { app: 'with-sentry', platform: 'ios' } 1`] = `
Array [
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "podName": "UMCore",
    "podspecDir": "monorepo/node_modules/@unimodules/core/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "@unimodules/react-native-adapter",
    "packageVersion": "6.3.1",
    "podName": "UMReactNativeAdapter",
    "podspecDir": "monorepo/node_modules/@unimodules/react-native-adapter/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "podName": "EXApplication",
    "podspecDir": "monorepo/node_modules/expo-application/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "podName": "EXConstants",
    "podspecDir": "monorepo/node_modules/expo-constants/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-device",
    "packageVersion": "3.3.0",
    "podName": "EXDevice",
    "podspecDir": "monorepo/node_modules/expo-device/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "podName": "EXErrorRecovery",
    "podspecDir": "monorepo/node_modules/expo-error-recovery/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "podName": "EXFileSystem",
    "podspecDir": "monorepo/node_modules/expo-file-system/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "podName": "EXFont",
    "podspecDir": "monorepo/node_modules/expo-font/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "podName": "EXImageLoader",
    "podspecDir": "monorepo/node_modules/expo-image-loader/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "podName": "EXKeepAwake",
    "podspecDir": "monorepo/node_modules/expo-keep-awake/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "podName": "ExpoModulesCore",
    "podspecDir": "monorepo/node_modules/expo-modules-core/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "podName": "EXPermissions",
    "podspecDir": "monorepo/node_modules/expo-permissions/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "podName": "EXSplashScreen",
    "podspecDir": "monorepo/node_modules/expo-splash-screen/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "podName": "EXStructuredHeaders",
    "podspecDir": "monorepo/node_modules/expo-structured-headers/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.2",
    "podName": "EXUpdates",
    "podspecDir": "monorepo/apps/with-sentry/node_modules/expo-updates/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.2",
    "podName": "EXUpdatesInterface",
    "podspecDir": "monorepo/apps/with-sentry/node_modules/expo-updates-interface/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "podName": "UMAppLoader",
    "podspecDir": "monorepo/node_modules/unimodules-app-loader/ios",
    "sourceDir": undefined,
  },
  Object {
    "appDelegateSubscribers": Array [],
    "modulesClassNames": Array [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "podName": "UMTaskManagerInterface",
    "podspecDir": "monorepo/node_modules/unimodules-task-manager-interface/ios",
    "sourceDir": undefined,
  },
]
`;

exports[`monorepo search ejected 1`] = `
Object {
  "@unimodules/core": Object {
    "config": Object {
      "name": "unimodules-core",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/@unimodules/core",
    "version": "7.1.1",
  },
  "@unimodules/react-native-adapter": Object {
    "config": Object {
      "android": Object {
        "packages": Array [],
      },
      "name": "unimodules-react-native-adapter",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/@unimodules/react-native-adapter",
    "version": "6.3.1",
  },
  "expo-application": Object {
    "config": Object {
      "name": "expo-application",
      "platforms": Array [
        "ios",
        "android",
        "web",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-application",
    "version": "3.2.0",
  },
  "expo-constants": Object {
    "config": Object {
      "name": "expo-constants",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-constants",
    "version": "11.0.1",
  },
  "expo-error-recovery": Object {
    "config": Object {
      "name": "expo-error-recovery",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-error-recovery",
    "version": "2.2.0",
  },
  "expo-file-system": Object {
    "config": Object {
      "name": "expo-file-system",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-file-system",
    "version": "11.1.3",
  },
  "expo-font": Object {
    "config": Object {
      "name": "expo-font",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-font",
    "version": "9.2.1",
  },
  "expo-image-loader": Object {
    "config": Object {
      "name": "expo-image-loader",
      "platforms": Array [
        "android",
        "ios",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-image-loader",
    "version": "2.2.0",
  },
  "expo-keep-awake": Object {
    "config": Object {
      "name": "expo-keep-awake",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-keep-awake",
    "version": "9.2.0",
  },
  "expo-modules-core": Object {
    "config": Object {
      "name": "expo-modules-core",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-modules-core",
    "version": "0.2.0",
  },
  "expo-permissions": Object {
    "config": Object {
      "name": "expo-permissions",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-permissions",
    "version": "12.1.1",
  },
  "expo-splash-screen": Object {
    "config": Object {
      "name": "expo-splash-screen",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-splash-screen",
    "version": "0.11.2",
  },
  "expo-structured-headers": Object {
    "config": Object {
      "name": "expo-structured-headers",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-structured-headers",
    "version": "1.1.1",
  },
  "expo-updates": Object {
    "config": Object {
      "name": "expo-updates",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-updates",
    "version": "0.8.0",
  },
  "expo-updates-interface": Object {
    "config": Object {
      "name": "expo-updates-interface",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-updates-interface",
    "version": "0.2.1",
  },
  "unimodules-app-loader": Object {
    "config": Object {
      "name": "unimodules-app-loader",
      "platforms": Array [
        "android",
        "ios",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/unimodules-app-loader",
    "version": "2.2.0",
  },
  "unimodules-task-manager-interface": Object {
    "config": Object {
      "name": "unimodules-task-manager-interface",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/unimodules-task-manager-interface",
    "version": "6.2.0",
  },
}
`;

exports[`monorepo search managed 1`] = `
Object {
  "@unimodules/core": Object {
    "config": Object {
      "name": "unimodules-core",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/@unimodules/core",
    "version": "7.1.1",
  },
  "@unimodules/react-native-adapter": Object {
    "config": Object {
      "android": Object {
        "packages": Array [],
      },
      "name": "unimodules-react-native-adapter",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/@unimodules/react-native-adapter",
    "version": "6.3.1",
  },
  "expo-application": Object {
    "config": Object {
      "name": "expo-application",
      "platforms": Array [
        "ios",
        "android",
        "web",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-application",
    "version": "3.2.0",
  },
  "expo-constants": Object {
    "config": Object {
      "name": "expo-constants",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-constants",
    "version": "11.0.1",
  },
  "expo-error-recovery": Object {
    "config": Object {
      "name": "expo-error-recovery",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-error-recovery",
    "version": "2.2.0",
  },
  "expo-file-system": Object {
    "config": Object {
      "name": "expo-file-system",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-file-system",
    "version": "11.1.3",
  },
  "expo-font": Object {
    "config": Object {
      "name": "expo-font",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-font",
    "version": "9.2.1",
  },
  "expo-image-loader": Object {
    "config": Object {
      "name": "expo-image-loader",
      "platforms": Array [
        "android",
        "ios",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-image-loader",
    "version": "2.2.0",
  },
  "expo-keep-awake": Object {
    "config": Object {
      "name": "expo-keep-awake",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-keep-awake",
    "version": "9.2.0",
  },
  "expo-modules-core": Object {
    "config": Object {
      "name": "expo-modules-core",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-modules-core",
    "version": "0.2.0",
  },
  "expo-permissions": Object {
    "config": Object {
      "name": "expo-permissions",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-permissions",
    "version": "12.1.1",
  },
  "expo-splash-screen": Object {
    "config": Object {
      "name": "expo-splash-screen",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-splash-screen",
    "version": "0.11.2",
  },
  "expo-structured-headers": Object {
    "config": Object {
      "name": "expo-structured-headers",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-structured-headers",
    "version": "1.1.1",
  },
  "expo-updates": Object {
    "config": Object {
      "name": "expo-updates",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-updates",
    "version": "0.8.0",
  },
  "expo-updates-interface": Object {
    "config": Object {
      "name": "expo-updates-interface",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-updates-interface",
    "version": "0.2.1",
  },
  "unimodules-app-loader": Object {
    "config": Object {
      "name": "unimodules-app-loader",
      "platforms": Array [
        "android",
        "ios",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/unimodules-app-loader",
    "version": "2.2.0",
  },
  "unimodules-task-manager-interface": Object {
    "config": Object {
      "name": "unimodules-task-manager-interface",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/unimodules-task-manager-interface",
    "version": "6.2.0",
  },
}
`;

exports[`monorepo search with-sentry 1`] = `
Object {
  "@unimodules/core": Object {
    "config": Object {
      "name": "unimodules-core",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/@unimodules/core",
    "version": "7.1.1",
  },
  "@unimodules/react-native-adapter": Object {
    "config": Object {
      "android": Object {
        "packages": Array [],
      },
      "name": "unimodules-react-native-adapter",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/@unimodules/react-native-adapter",
    "version": "6.3.1",
  },
  "expo-application": Object {
    "config": Object {
      "name": "expo-application",
      "platforms": Array [
        "ios",
        "android",
        "web",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-application",
    "version": "3.2.0",
  },
  "expo-constants": Object {
    "config": Object {
      "name": "expo-constants",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-constants",
    "version": "11.0.1",
  },
  "expo-device": Object {
    "config": Object {
      "name": "expo-device",
      "platforms": Array [
        "ios",
        "android",
        "web",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-device",
    "version": "3.3.0",
  },
  "expo-error-recovery": Object {
    "config": Object {
      "name": "expo-error-recovery",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-error-recovery",
    "version": "2.2.0",
  },
  "expo-file-system": Object {
    "config": Object {
      "name": "expo-file-system",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-file-system",
    "version": "11.1.3",
  },
  "expo-font": Object {
    "config": Object {
      "name": "expo-font",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-font",
    "version": "9.2.1",
  },
  "expo-image-loader": Object {
    "config": Object {
      "name": "expo-image-loader",
      "platforms": Array [
        "android",
        "ios",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-image-loader",
    "version": "2.2.0",
  },
  "expo-keep-awake": Object {
    "config": Object {
      "name": "expo-keep-awake",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-keep-awake",
    "version": "9.2.0",
  },
  "expo-modules-core": Object {
    "config": Object {
      "name": "expo-modules-core",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-modules-core",
    "version": "0.2.0",
  },
  "expo-permissions": Object {
    "config": Object {
      "name": "expo-permissions",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-permissions",
    "version": "12.1.1",
  },
  "expo-splash-screen": Object {
    "config": Object {
      "name": "expo-splash-screen",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-splash-screen",
    "version": "0.11.2",
  },
  "expo-structured-headers": Object {
    "config": Object {
      "name": "expo-structured-headers",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/expo-structured-headers",
    "version": "1.1.1",
  },
  "expo-updates": Object {
    "config": Object {
      "name": "expo-updates",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [
      Object {
        "path": "monorepo/node_modules/expo-updates",
        "version": "0.8.0",
      },
    ],
    "path": "monorepo/apps/with-sentry/node_modules/expo-updates",
    "version": "0.8.2",
  },
  "expo-updates-interface": Object {
    "config": Object {
      "name": "expo-updates-interface",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [
      Object {
        "path": "monorepo/node_modules/expo-updates-interface",
        "version": "0.2.1",
      },
    ],
    "path": "monorepo/apps/with-sentry/node_modules/expo-updates-interface",
    "version": "0.2.2",
  },
  "unimodules-app-loader": Object {
    "config": Object {
      "name": "unimodules-app-loader",
      "platforms": Array [
        "android",
        "ios",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/unimodules-app-loader",
    "version": "2.2.0",
  },
  "unimodules-task-manager-interface": Object {
    "config": Object {
      "name": "unimodules-task-manager-interface",
      "platforms": Array [
        "ios",
        "android",
      ],
    },
    "duplicates": Array [],
    "path": "monorepo/node_modules/unimodules-task-manager-interface",
    "version": "6.2.0",
  },
}
`;

exports[`monorepo verify { app: 'ejected', platform: 'android' } 1`] = `
"✅ Everything is fine!
"
`;

exports[`monorepo verify { app: 'ejected', platform: 'ios' } 1`] = `
"✅ Everything is fine!
"
`;

exports[`monorepo verify { app: 'managed', platform: 'android' } 1`] = `
"✅ Everything is fine!
"
`;

exports[`monorepo verify { app: 'managed', platform: 'ios' } 1`] = `
"✅ Everything is fine!
"
`;

exports[`monorepo verify { app: 'with-sentry', platform: 'android' } 1`] = `
" - [35mnode_modules/expo-updates[39m ([36m0.8.2[39m)
 - [90m../../node_modules/expo-updates[39m ([90m0.8.0[39m)
 - [35mnode_modules/expo-updates-interface[39m ([36m0.2.2[39m)
 - [90m../../node_modules/expo-updates-interface[39m ([90m0.2.1[39m)
"
`;

exports[`monorepo verify { app: 'with-sentry', platform: 'ios' } 1`] = `
" - [35mnode_modules/expo-updates[39m ([36m0.8.2[39m)
 - [90m../../node_modules/expo-updates[39m ([90m0.8.0[39m)
 - [35mnode_modules/expo-updates-interface[39m ([36m0.2.2[39m)
 - [90m../../node_modules/expo-updates-interface[39m ([90m0.2.1[39m)
"
`;
